--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <a href="" class="contact-details"><i class="fa fa-at icon" style="font-size:42px"></i>Send a mail</a>
                 </div>
                 <div class="footer-container">
-                    <p class="footer-text">Derechos reservados © 2023 - Marcos Guzmán M.</p>
+                    <p class="footer-text">Website Design by Marcos Guzmán M.</p>
                 </div>
               </section>
         </main>
