--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             <section id="projects" class="projects-section">
                 <h2 class="projects-section-header">These are some of my projects</h2>               
                 <div class="grid-section" id="cards-container">         
-                      
+                    <!-- <div class="card-container">
+                        <a  href="${urlRepository}" target="_blank" ><img class="project-image" src="https://live.staticflickr.com/65535/52776165470_e77484fc11_z.jpg" alt="project" /></a>
+                        <a href=""><p class="project-title"> <span class="code">&lt;</span>${projectName}<span class="code">&#47;&gt;</span></p></a>
+                    </div> -->
+
                 </div>
 
             </section>
