--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
                   <a href="https://www.linkedin.com/in/marcosegm14" target="_blank" class="contact-details"><i class="fa fa-linkedin-square icon" style="font-size:42px"></i>LinkedIn</a>
                   <a href="https://github.com/Marcosegm" target="_blank" class="contact-details"><i class="fa fa-github icon" style="font-size:42px "></i>GitHub</a>
                   <a href="https://twitter.com/marcosegm14" target="_blank" class="contact-details"><i class="fa fa-twitter icon" style="font-size:42px"></i>Twitter</a>
-                  <a href="" class="contact-details"><i class="fa fa-at icon" style="font-size:42px"></i>Send a mail</a>
+                  <a href="mailto:marcos14gm@gmail.com" class="contact-details"><i class="fa fa-at icon" style="font-size:42px"></i>Send a mail</a>
                 </div>
                 <div class="footer-container">
                     <p class="footer-text">Website Design by Marcos Guzmán M.</p>
                 </div>
               </section>
         </main>
-
         <script src="main.js"></script>
     </body>
 </html>
